--- a/hospital-management-system/src/main/resources/application.properties
+++ b/hospital-management-system/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/hospital-management-system
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+application.title=Hospital Management System
+application.version=1.0.0
+
+logging.level.org.springframework=info
