--- a/hospital-management-system/src/main/resources/application.properties
+++ b/hospital-management-system/src/main/resources/application.properties
@@ -3,10 +3,13 @@ spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 application.title=Hospital Management System
 application.version=1.0.0
 
 logging.level.org.springframework=info
+
+hospitalmanagementsystem.jwt.security.app.key= HOSPITAL-MANAGEMENT-SYSTEM
+hospitalmanagementsystem.jwt.security.expire.date = 86400000
